--- a/src/styles/header/Header.scss
+++ b/src/styles/header/Header.scss
@@ -1,11 +1,16 @@
+/* * {
+  outline: 1px solid red;
+} */
 .my-description {
   scroll-margin-top: 70px;
   overscroll-behavior: none;
   display: flex;
+  flex-wrap: wrap;
   place-content: center;
   padding: 50px 0;
   .my-description-content {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 40px;
     padding: 30px;
